[b] Fix display issue on safari

--- a/mobile/static/mobile/sass/main_page.sass
+++ b/mobile/static/mobile/sass/main_page.sass
@@ -2,7 +2,6 @@
   background-color: $search-page-background-color
   .search-wrapper
     position: relative
-    margin-top: 270px
     width: 100%
     padding: 0 3%
     &.top-left
