--- a/mobile/static/mobile/sass/main_page/project_summary.sass
+++ b/mobile/static/mobile/sass/main_page/project_summary.sass
@@ -1,17 +1,26 @@
 .project-summary
-  position: absolute
-  padding: 36px 20px
+  position: relative
   width: 100%
   color: $logo-text-color
   background-color: $logo-background
-  height: 340px
+  padding-bottom: 20px
   &.top-left
-    opacity: 0
-  .cpdb-logo
-    font-size: 30px
-    font-weight: bold
-    margin-bottom: 9px
-  .cpdb-description
-    font-size: 15px
-    line-height: 20px
-    opacity: 0.5
+    background-color: transparent
+    padding-bottom: 0
+  .summary
+    display: block
+    max-height: 300px
+    &.top-left
+      max-height: 0px
+      overflow: hidden
+    .cpdb-logo
+      font-size: 30px
+      font-weight: bold
+      padding: 36px 20px 10px 20px
+    .cpdb-description
+      font-size: 15px
+      line-height: 20px
+      opacity: 0.5
+      margin: 20px 20px
+      .paragraph
+        margin: 10px 0
