--- a/mobile/static/mobile/sass/main_page/search_results/failed_search.sass
+++ b/mobile/static/mobile/sass/main_page/search_results/failed_search.sass
@@ -2,3 +2,4 @@
   margin-top: 16px
   font-size: 15px
   line-height: 21px
+  position: relative
