--- a/mobile/static/mobile/sass/main_page/search_results/successful_search.sass
+++ b/mobile/static/mobile/sass/main_page/search_results/successful_search.sass
@@ -1,4 +1,5 @@
 .success-search
+  position: relative
   .suggestion-list
     list-style-type: none
     padding: 0
